fix: address SonarQube code quality issues (#61)
- Extract '#default' SolrJ field sentinel to SolrPersistentProperty.FIELD_DEFAULT_SENTINEL
  constant, eliminating six duplicate string literals across five files (S1192)
- Add missing @Override on SolrRepositoryConfigurationExtension.getModuleName() (S2391)
- Extract 'solrMappingContext' and 'solrTemplate' bean-name strings to constants in
  SolrRepositoryConfigurationExtension (S1192)
- Remove public modifier from @Bean methods in SolrAutoConfiguration; Spring does not
  require public visibility on bean methods (S2177)
- Replace Collectors.toList() with Stream.toList() in SimpleSolrRepository.findAllById()
  and remove the now-unused Collectors import (modernisation, JDK 21 baseline)